--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -2,7 +2,7 @@
     <footer class="text-muted">
         <div class="container">
             <p class="float-right">
-                <a href="#">Back to top</a>
+                <a href="#">Вернуться наверх</a>
             </p>
             <p>Album example is © Bootstrap, but please download and customize it for yourself!</p>
             <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a
