--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -4,9 +4,9 @@
             <p class="float-right">
                 <a href="#">Вернуться наверх</a>
             </p>
-            <p>Album example is © Bootstrap, but please download and customize it for yourself!</p>
-            <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a
-                    href="/docs/4.5/getting-started/introduction/">getting started guide</a>.</p>
+            <p></p>
+            <p>©2000-2020 www.localhost
+                Свидетельство **** **** **** ****</p>
         </div>
     </footer>
 </div>
