edit and delete post

--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -5,8 +5,10 @@
                 <a href="#">Вернуться наверх</a>
             </p>
             <p></p>
-            <p>©2000-2020 www.localhost
+            <p>©2000-2020 www.localhost<br>
                 Свидетельство **** **** **** ****</p>
+            <br>
+            <br>
         </div>
     </footer>
 </div>
